infrastructure/auth/keycloak/adminproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: keycloakadminproxy
spec:
  virtualhost:
    fqdn: accessadmin.cornerstones.home
    tls:
      secretName: keycloakadminproxy

  - conditions:
    - prefix: /auth
    services:
      - name: keycloak-http
        port: 9990
