infrastructure/auth/keycloak/ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: keycloakproxy
spec:
  virtualhost:
    fqdn: access.cornerstones.home
    tls:
      secretName: keycloakproxy
  routes:
  - services:
    - name: keycloak-http
      port: 9280 
  - conditions:
    - prefix: /auth/
    services:
      - name: keycloak-http
        port: 9990
